# LiveCue

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: presentations.py
apps/api/app/api/schemas/: workflow.py
apps/api/app/core/database/: session.py
apps/api/app/domains/decks/: models.py  (+1 more)
apps/api/app/services/: workflow_tree.py
apps/api/backend/: config.py  database.py  main.py
apps/api/backend/ai/: model_client.py
apps/api/backend/auth/: google_auth.py  token_store.py
apps/api/backend/google/: presentation_import.py  presentation_ingest.py  schemas.py  slides_client.py
apps/api/backend/persistence/: models.py  presentations.py  workflow_tree.py
apps/api/backend/routes/: auth.py  google.py  presentations.py  transcription.py
apps/api/backend/schemas/: presentations.py
apps/api/backend/transcription/: asr_transcriber.py
apps/api/database/: config.toml  seed_mock_presentation.py
apps/api/rt_presentation_feedback_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: seed_mock_presentation.py  test_whisper_transcriber.py
apps/api/supabase/: config.toml  seed.sql  seed_mock_presentation.py
apps/api/supabase/migrations/: 20260420000100_create_google_slides_persistence.sql  20260420000200_create_workflow_nodes.sql  20260508000100_create_presentation_transcript_chunks.sql  20260513000100_create_slide_demo_transcripts.sql  20260525000100_create_post_feedback_vignettes.sql  20260602000100_add_workflow_node_owner_user_id.sql
(+74 files in other folders)
