[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rt-presentation-feedback-backend"
version = "0.1.0"
description = "Backend services for the RT Presentation Feedback project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2.0",
    "fastapi>=0.116,<1.0",
    "httpx>=0.28,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.10,<3.0",
    "python-dotenv>=1.1,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
    "websockets>=15.0,<16.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17,<2.0",
    "pytest>=8.4,<9.0",
    "pytest-asyncio>=1.1,<2.0",
    "ruff>=0.12,<1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
